resources/sass/pages/_resultsPage.scss
.results-page {

    .filter-section {
        flex-basis: 85%;
        display: flex;

        .filter-section-child {
            flex: 1;
            padding: 0 20px;
            &:not(:last-child) {
                border-right: 2px solid #d7d7d7;
            }
            &:first-child {
                margin-left: -20px;
            }
        }
    }

    .submit-section {
        display: flex;
        justify-content: flex-end;
        flex-basis: 15%;

        .submit-section-child {
            justify-content: flex-end;
            align-items: flex-end;
        }
    }

    // Shared style for selects on results page

    .select-parent {
        position: relative;
        width: 100%;

        label {
            font-size: 14px;
            letter-spacing: -0.7px;
            line-height: 18px;
            margin-bottom: 6px;
        }

        .black-chevron {
            position: absolute;
            right: 15px;
            bottom: 12px;
            color: $caretBlack;
            pointer-events: none;
        }
    }

    .results-page-select {
        padding: 10px 40px 10px 13px;
        background-color: $white;
        /* Style for "Knee Opera" */
        color: $darkerGrey;
        font-size: 12px;
        font-weight: 500;
        letter-spacing: -0.6px;
        line-height: 15px;
    }

    .filter-parent {
        width: $fullWidth;
        background-color: $white;
        padding-top: 23px;
    }

    .postcode-proximity,
    .select-proximity {
        @include flex;
    }

    .postcode-proximity-child,
    .submit-section-child,
    .filter-section-child {
        @include uniformAlignment;
        position: relative;
        margin-bottom: 20px;
        display: flex;
        align-items: center;

        #input_postcode {
            width: 100%;
            padding: 20px 0 18px 16px;

            @include placeholder {
                font-size: 18px;
                //text-transform: uppercase;
            }
        }
    }

    .sort-parent {
        width: $fullWidth;
        background-color: $lighterGrey;
    }

    .sort {
        width: $pageWrap;
        margin: $centerOnPage;
    }

    .sort-bar {
        @include flex;
        justify-content: space-between;

        .show-section {
            margin: auto auto auto 0;
        }

        .sort-section {
            margin: 10px 0;

            .results-page-select {
                width: auto
            }
        }

        .show-section,
        .sort-section {
            //margin: auto;
        }
    }


    .sort-page-select, .sort-by {
        width: 200px;
    }

    .sort-label {
        left: 0 !important;
        top: -10px !important;
    }

    .sort-by {
        top: -10px !important;
        position: relative;
    }

    .sort-categories-parent {
        background-color: $teal;


    }

    .sort-categories-header,
    .sort-categories {
        @include flex;
    }

    .sort-categories-header {
        //width: 1180px;
        margin: auto;

        .sort-categories-section-3 {
            &:before,
            &:after {
                display: none;
            }
        }
    }

    .sort-categories {
        margin-bottom: 7px;
        background-color: $white;
    }

    .sortCategoriesResults {
        background-color: $lighterGrey;
    }

    .sort-categories-inner {
        display: flex;
        //width: 1180px;
        margin: auto;
    }

    .sort-categories-section-1 {
        flex: 1 0 33%;
    }

    .sort-categories-section-2 {
        flex: 1 0 53%;

    }

    .sort-categories-section-3 {
        flex: 1 0 14%;
        min-width: 170px;
        padding: 10px 0 10px 10px;
        @include pseudo-border($borderGrey);

        .btn-area-lower {
            border-top: 1px solid #d7d7d7;
            padding-top: 10px;

        }
    }


    .sort-categories-menu {
        @include flex;
        width: 100%;
        margin-bottom: 0;

        li {
            padding: 18px 0;
            position: relative;
            list-style: none;
            @include uniformAlignment;
            @include flex-center;
            justify-content: flex-start;
            flex-direction: column;
            color: #ffffff;
            font-size: 14px;
            font-weight: 500;
            letter-spacing: -0.7px;
            line-height: 16.8px;
            text-align: center;

            span.sort-arrow {
                position: absolute;
                bottom: 10px;
                display: inline-block;
                @include icon-bg-center(10%);
                width: 100%;
                height: 20px;
                background-image: url('../images/icons/caret-down-white.svg');
                cursor: pointer;
                //background-color: red;
            }
            span.sort-arrow.asc {
                transform: rotateX(0deg);
            }

            span.sort-arrow.desc {
                transform: rotateX(180deg);
            }
        }
    }

    .sort-categories-section-1, .sort-categories-section-2 {
        @include flex;
    }

    .sort-categories-section-2__child {
        flex: 1;
        @include flex-center;
        /* Style for "5.3 Weeks" */
        font-size: 16px;
        font-weight: 400;
        letter-spacing: -0.8px;
        line-height: 20px;
        text-align: center;

        small {
            font-size: 10px;
            line-height: 1;
        }

        p {
            margin-bottom: 0;
        }
    }

    .sort-categories-item {
        position: relative;

        &:last-child {
            padding: 8px;
        }
    }

    .sort-item-title {
        font-size: 16px;
        font-weight: 500;
        letter-spacing: -0.8px;
        line-height: 19.2px;
        margin-bottom: 4px;
    }

    .sort-item-location {
        color: #040202;
        font-size: 14px;
        font-weight: 400;
        letter-spacing: -0.7px;
        line-height: 1.3;
        margin-bottom: 2px;
    }

    .find-link {
        color: #00cecd;
        font-size: 14px;
        font-weight: 700;
        letter-spacing: -0.7px;
        //line-height: 19.2px;
    }

    .NHSHospital, .privateHospital {
        position: absolute;
        top: 0;
        width: 60px;
        height: 60px;
        transform: rotate(180deg);
    }

    .NHSHospital {

        border-bottom: solid 30px $darkBlue;
        border-right: solid 30px $darkBlue;
        border-left: solid 30px transparent;
        border-top: solid 30px transparent;

    }

    .privateHospital {
        border-bottom: solid 30px $hotpink;
        border-right: solid 30px $hotpink;
        border-left: solid 30px transparent;
        border-top: solid 30px transparent;
    }

    .NHSHospital,
    .privateHospital {
        text-align: center;

        p {
            transform: rotate(135deg);
            position: relative;
            color: #ffffff;
            left: 20px;
            top: -12px;
            font-size: .6em;
            line-height: 13px;
        }
    }

    .fa-heart {
        padding-left: 2px;
    }


}


.js-is-sticky {
    //padding-top: 85.6px;
}

#sort_categories_parent {
    top: 0;
    left: 0;
    right: 0;
    width: 100%;
    z-index: 1050;
}

